--- a/css/style.css
+++ b/css/style.css
@@ -306,13 +306,14 @@ p {
 }
 
 .project img, .project h4 {
-    -webkit-transition: all 1s ease;
+  -webkit-transition: all 1s ease;
      -moz-transition: all 1s ease;
        -o-transition: all 1s ease;
       -ms-transition: all 1s ease;
           transition: all 1s ease;
 }
 .project:hover img {
+  filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 3.5+ */
   -moz-filter: grayscale(100%);
   -webkit-filter: grayscale(100%);
   -o-filter: grayscale(100%);
