less loading time

--- a/css/style.css
+++ b/css/style.css
@@ -226,10 +226,10 @@ p {
 
 .intro .bg {
   background-image: url(../images/intro.jpg);
-  transition: opacity 1.1s ease-in;
-  -webkit-transition: opacity 1.1s ease-in;
-  -o-transition: opacity 1.1s ease-in;
-  -moz-transition: opacity 1.1s ease-in;
+  transition: opacity .7s ease-in;
+  -webkit-transition: opacity .7s ease-in;
+  -o-transition: opacity .7s ease-in;
+  -moz-transition: opacity .7s ease-in;
   opacity: 0;
   z-index: -1;
 }
