--- a/css/style.css
+++ b/css/style.css
@@ -170,11 +170,8 @@ p {
   z-index: 99;
   position: absolute;
   top: 100px;
-  left: 100px;
-  -webkit-transform: translateX(-50px);
-      -ms-transform: translateX(-50px);
-       -o-transform: translateX(-50px);
-          transform: translateX(-50px);
+  left: 50px;
+  opacity: 0;
   -webkit-transition: all 1s ease;
      -moz-transition: all 1s ease;
        -o-transition: all 1s ease;
@@ -182,10 +179,11 @@ p {
           transition: all 1s ease;
 }
 .loaded .title {
-  -webkit-transform: translateX(0);
-      -ms-transform: translateX(0);
-       -o-transform: translateX(0);
-          transform: translateX(0);
+  -webkit-transform: translateX(50px);
+      -ms-transform: translateX(50px);
+       -o-transform: translateX(50px);
+          transform: translateX(50px);
+  opacity: 1;
 }
 .title .role {
   font-weight: 300;
